log
Fri Apr 17 07:09:13 PM UTC 2026: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:16: error: comparison of distinct pointer types lacks a cast [-Werror=compare-distinct-pointer-types]
   75 |     while (key == map->buckets[i] || map->buckets[i] == NULL) i++;
      |                ^~
hashmap.c:77:5: error: expected ‘,’ or ‘;’ before ‘return’
   77 |     return buscado;
      |     ^~~~~~
hashmap.c:76:11: error: unused variable ‘buscado’ [-Werror=unused-variable]
   76 |     Pair *buscado = map->buckets[i]
      |           ^~~~~~~
cc1: all warnings being treated as errors
2debd1b
Fri Apr 17 07:12:19 PM UTC 2026: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:23: error: comparison of distinct pointer types lacks a cast [-Werror=compare-distinct-pointer-types]
   75 |     while (strcmp(key == map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |                       ^~
hashmap.c:75:23: error: passing argument 1 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
   75 |     while (strcmp(key == map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |                   ~~~~^~~~~~~~~~~~~~~~~~
      |                       |
      |                       int
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:32: note: expected ‘const char *’ but argument is of type ‘int’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                    ~~~~~~~~~~~~^~~~
hashmap.c:75:12: error: too few arguments to function ‘strcmp’
   75 |     while (strcmp(key == map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |            ^~~~~~
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
cc1: all warnings being treated as errors
50e2fc2
Fri Apr 17 07:12:40 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:36: error: passing argument 2 of ‘strcmp’ from incompatible pointer type [-Wincompatible-pointer-types]
   75 |     while (strcmp(key, map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |                        ~~~~~~~~~~~~^~~
      |                                    |
      |                                    Pair *
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:50: note: expected ‘const char *’ but argument is of type ‘Pair *’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
79ecadb
Fri Apr 17 07:13:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:36: error: passing argument 2 of ‘strcmp’ from incompatible pointer type [-Wincompatible-pointer-types]
   75 |     while (strcmp(key, map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |                        ~~~~~~~~~~~~^~~
      |                                    |
      |                                    Pair *
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:50: note: expected ‘const char *’ but argument is of type ‘Pair *’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
hashmap.c:76:21: error: initialization of ‘Pair *’ from incompatible pointer type ‘char *’ [-Wincompatible-pointer-types]
   76 |     Pair *buscado = map->buckets[i]->key;
      |                     ^~~
c2ea925
Fri Apr 17 07:13:44 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:36: error: passing argument 2 of ‘strcmp’ from incompatible pointer type [-Wincompatible-pointer-types]
   75 |     while (strcmp(key, map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |                        ~~~~~~~~~~~~^~~
      |                                    |
      |                                    Pair *
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:50: note: expected ‘const char *’ but argument is of type ‘Pair *’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
hashmap.c:76:21: error: initialization of ‘Pair *’ from incompatible pointer type ‘char *’ [-Wincompatible-pointer-types]
   76 |     Pair *buscado = map->buckets[i]->key;
      |                     ^~~
6a29cac
Fri Apr 17 07:15:22 PM UTC 2026: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/60
60d1483
